--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -489,7 +489,7 @@
     "\n",
     "# Overwriting the product action column.\n",
     "# Casting as a string (from tuple) is necessary for translating to dict in Oracle function\n",
-    "df['session'] = df['product_action'].map(lambda session: str(tuple([symbol_alpha[action] for action in session])))\n",
+    "df['session'] = df['product_action'].map(lambda session: tuple([symbol_alpha[action] for action in session]))\n",
     "df = df[['session', 'purchase']]\n",
     "df.head()"
    ]
@@ -580,11 +580,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "807aedb3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of clicks:  5 \tPurchase sessions:   116 \tNo purchase sessions:   476 \tTotal:  592\n",
+      "Number of clicks:  5 \tPurchase sessions:   503 \tNo purchase sessions:   1679 \tTotal:  2182\n"
+     ]
+    }
+   ],
    "source": [
+    "from collections import defaultdict\n",
+    "\n",
     "# Return an oracle file for N clicks after add event (e.g. event 0)\n",
     "def make_oracle(dataset, max_clicks):\n",
     "    \n",
@@ -592,35 +603,43 @@
     "    Find the count of each unique session, both for purchase and no purchase sessions\n",
     "    Function creates an oracle based on the clicks post add-to-cart, so filters based on session length\n",
     "    Since we dropped all actions up to and including first add we can start from index 0\n",
-    "    \"\"\" \n",
+    "    \"\"\"\n",
+    "    correction = 1\n",
     "    \n",
-    "    n_buy = dataset.session[(eval_set['purchase'] == 1) & (dataset['session'].str.len() >= max_clicks)].value_counts()\n",
-    "    n_nobuy = dataset.session[(eval_set['purchase'] == 0) & (dataset['session'].str.len() >= max_clicks)].value_counts()\n",
-    "    \n",
-    "    oracle = dict.fromkeys(dataset.session)\n",
+    "    buy = dataset.session[(dataset['purchase'] == 1) & \\\n",
+    "                            (dataset['session'].str.len() >= max_clicks)].value_counts() + correction\n",
+    "    nobuy = dataset.session[(dataset['purchase'] == 0) & \\\n",
+    "                            (dataset['session'].str.len() >= max_clicks)].value_counts() + correction\n",
+    "           \n",
+    "    oracle = dict.fromkeys(dataset.session[dataset['session'].str.len() >= max_clicks])\n",
     "\n",
     "    \"\"\"\n",
     "    Are we even calculating precision here? Is the assumption that everything is flagged as a purchase session?\n",
-    "    Took a guess and just applied the same principle to \"recall\" and used that as the basis for F1 score\n",
-    "    This insta-nukes every result that has a precision of 1 (since it does not occur in recall). Seems bad.\n",
+    "    \n",
+    "    Correcting all results by 1 means all results are bumped down up 0 to 0.33, which seems substantial\n",
+    "    Not correcting means we have a lot of certain no-purchase results, maybe that's good?\n",
+    "    Correcting by decimals is an option but that sounds like a silly solution?\n",
     "    \"\"\"\n",
     "    \n",
+    "    print(\"Number of clicks: \", max_clicks, \"\\tPurchase sessions:  \", len(buy), \\\n",
+    "          \"\\tNo purchase sessions:  \", len(nobuy), \"\\tTotal: \", len(nobuy) + len(buy))\n",
+    "    \n",
     "    for key in oracle.keys():\n",
-    "        precision = n_buy.get(key, default=0) / (n_buy.get(key, default = 0) + n_nobuy.get(key, default = 0))\n",
-    "        recall = n_nobuy.get(key, default = 0) / (n_buy.get(key, default = 0) + n_nobuy.get(key, default = 0))\n",
-    "        f1 = 2 * ((precision * recall) / (precision + recall))\n",
-    "        oracle[key] = f1\n",
+    "        nb, nn = buy.get(key, default = correction), nobuy.get(key, default = correction)\n",
+    "        oracle[key] = nb / (nb + nn)\n",
     "    return oracle\n",
     "\n",
     "# As per the assignment, oracles are made for 5, 10 and 15 post add-to-cart clicks\n",
-    "oracle5 = make_oracle(eval_set, 5)\n",
-    "#oracle10 = make_oracle(eval_set, 10)\n",
-    "#oracle15 = make_oracle(eval_set, 15)"
+    "ev_oracle5 = make_oracle(eval_set, 5)\n",
+    "#ev_oracle10 = make_oracle(eval_set, 10)\n",
+    "#ev_oracle15 = make_oracle(eval_set, 15)\n",
+    "\n",
+    "tr_oracle5 = make_oracle(training_set, 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "063db289",
    "metadata": {},
    "outputs": [
@@ -628,21 +647,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)', 0.4444444444444444), ('(1, 1, 1, 2, 1, 1, 1)', 0.5), ('(1, 1, 1, 1, 1, 1, 1)', 0.40816326530612246), ('(3, 1, 1, 1, 1, 1)', 0.5), ('(1, 1, 1, 1, 1, 1)', 0.5), ('(1, 2, 1, 1, 1)', 0.5), ('(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)', 0.4444444444444444), ('(1, 1, 1, 1, 1)', 0.4982698961937716), ('(1, 1, 1, 1, 1, 1, 1, 1, 1, 1)', 0.5), ('(1, 1, 1, 1, 1, 1, 1, 1, 1)', 0.24489795918367344), ('(1, 1, 2, 1, 1, 1, 1)', 0.4444444444444444), ('(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)', 0.4444444444444444), ('(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)', 0.5), ('(1, 1, 1, 1, 1, 1, 2, 1, 1, 1)', 0.5)]\n"
+      "(1, 1, 1, 1, 2) \tTraining:  0.17 \tEval:  0.33 \tDiff:  -0.17\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.45 \tEval:  0.38 \tDiff:  0.08\n",
+      "(1, 1, 2, 1, 1) \tTraining:  0.14 \tEval:  0.20 \tDiff:  -0.06\n",
+      "(1, 1, 2, 1, 1) \tTraining:  0.50 \tEval:  0.20 \tDiff:  0.30\n",
+      "(1, 1, 1, 2, 1) \tTraining:  0.40 \tEval:  0.50 \tDiff:  -0.10\n",
+      "(1, 1, 2, 1, 2) \tTraining:  0.14 \tEval:  0.25 \tDiff:  -0.11\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.21 \tEval:  0.67 \tDiff:  -0.45\n",
+      "(3, 1, 1, 1, 1) \tTraining:  0.67 \tEval:  0.50 \tDiff:  0.17\n",
+      "(1, 1, 1, 1, 2) \tTraining:  0.25 \tEval:  0.33 \tDiff:  -0.08\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.30 \tEval:  0.50 \tDiff:  -0.20\n",
+      "(1, 1, 1, 1, 2) \tTraining:  0.33 \tEval:  0.25 \tDiff:  0.08\n",
+      "(1, 1, 1, 2, 1) \tTraining:  0.20 \tEval:  0.67 \tDiff:  -0.47\n",
+      "(2, 1, 1, 2, 1) \tTraining:  0.20 \tEval:  0.33 \tDiff:  -0.13\n",
+      "(1, 2, 1, 1, 1) \tTraining:  0.20 \tEval:  0.33 \tDiff:  -0.13\n",
+      "(2, 1, 2, 1, 1) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(1, 2, 1, 1, 1) \tTraining:  0.36 \tEval:  0.50 \tDiff:  -0.14\n",
+      "(1, 2, 1, 1, 1) \tTraining:  0.25 \tEval:  0.33 \tDiff:  -0.08\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.39 \tEval:  0.38 \tDiff:  0.01\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.38 \tEval:  0.47 \tDiff:  -0.09\n",
+      "(4, 1, 4, 1, 4) \tTraining:  0.86 \tEval:  0.67 \tDiff:  0.19\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.44 \tEval:  0.50 \tDiff:  -0.06\n",
+      "(1, 1, 2, 1, 1) \tTraining:  0.29 \tEval:  0.20 \tDiff:  0.09\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.52 \tEval:  0.22 \tDiff:  0.30\n",
+      "(2, 1, 2, 1, 3) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(1, 2, 1, 2, 1) \tTraining:  0.12 \tEval:  0.25 \tDiff:  -0.12\n",
+      "(3, 1, 1, 1, 1) \tTraining:  0.25 \tEval:  0.33 \tDiff:  -0.08\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.43 \tEval:  0.17 \tDiff:  0.26\n",
+      "(3, 1, 1, 4, 1) \tTraining:  0.25 \tEval:  0.67 \tDiff:  -0.42\n",
+      "(1, 1, 1, 2, 1) \tTraining:  0.25 \tEval:  0.25 \tDiff:  0.00\n",
+      "(1, 1, 2, 1, 1) \tTraining:  0.29 \tEval:  0.60 \tDiff:  -0.31\n",
+      "(1, 1, 1, 1, 3) \tTraining:  0.67 \tEval:  0.33 \tDiff:  0.33\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.25 \tEval:  0.60 \tDiff:  -0.35\n",
+      "(1, 2, 1, 2, 1) \tTraining:  0.25 \tEval:  0.33 \tDiff:  -0.08\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.33 \tEval:  0.67 \tDiff:  -0.33\n",
+      "(1, 2, 1, 1, 2) \tTraining:  0.67 \tEval:  0.33 \tDiff:  0.33\n",
+      "(4, 1, 4, 1, 1) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(4, 1, 4, 1, 4) \tTraining:  0.67 \tEval:  0.67 \tDiff:  0.00\n",
+      "(1, 1, 2, 1, 2) \tTraining:  0.14 \tEval:  0.33 \tDiff:  -0.19\n",
+      "(3, 1, 1, 2, 1) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(1, 1, 2, 1, 1) \tTraining:  0.14 \tEval:  0.33 \tDiff:  -0.19\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.50 \tEval:  0.33 \tDiff:  0.17\n",
+      "(3, 1, 1, 1, 1) \tTraining:  0.50 \tEval:  0.33 \tDiff:  0.17\n",
+      "(2, 1, 1, 1, 1) \tTraining:  0.33 \tEval:  0.25 \tDiff:  0.08\n",
+      "(1, 1, 2, 1, 1) \tTraining:  0.25 \tEval:  0.33 \tDiff:  -0.08\n",
+      "(1, 1, 1, 2, 3) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(3, 1, 1, 1, 1) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(1, 2, 1, 1, 2) \tTraining:  0.17 \tEval:  0.33 \tDiff:  -0.17\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.38 \tEval:  0.50 \tDiff:  -0.12\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.67 \tEval:  0.50 \tDiff:  0.17\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.33 \tEval:  0.25 \tDiff:  0.08\n",
+      "(1, 2, 2, 1, 2) \tTraining:  0.25 \tEval:  0.33 \tDiff:  -0.08\n",
+      "(1, 2, 1, 1, 4) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(1, 2, 1, 1, 2) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(2, 1, 2, 1, 2) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(2, 1, 2, 1, 2) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.50 \tEval:  0.33 \tDiff:  0.17\n",
+      "(3, 1, 2, 1, 1) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(1, 2, 2, 1, 1) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(4, 1, 1, 1, 1) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.50 \tEval:  0.67 \tDiff:  -0.17\n",
+      "(4, 1, 4, 1, 4) \tTraining:  0.25 \tEval:  0.33 \tDiff:  -0.08\n",
+      "(2, 1, 1, 2, 2) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(1, 1, 1, 2, 1) \tTraining:  0.67 \tEval:  0.67 \tDiff:  0.00\n",
+      "(1, 1, 3, 1, 1) \tTraining:  0.50 \tEval:  0.67 \tDiff:  -0.17\n",
+      "(1, 2, 1, 2, 2) \tTraining:  0.17 \tEval:  0.33 \tDiff:  -0.17\n",
+      "(4, 1, 1, 1, 1) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(2, 1, 2, 1, 1) \tTraining:  0.14 \tEval:  0.33 \tDiff:  -0.19\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.40 \tEval:  0.67 \tDiff:  -0.27\n",
+      "(1, 1, 2, 3, 1) \tTraining:  0.75 \tEval:  0.67 \tDiff:  0.08\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.25 \tEval:  0.67 \tDiff:  -0.42\n",
+      "(1, 2, 1, 1, 1) \tTraining:  0.33 \tEval:  0.67 \tDiff:  -0.33\n",
+      "(4, 1, 4, 4, 4) \tTraining:  0.33 \tEval:  0.33 \tDiff:  0.00\n",
+      "(1, 1, 1, 1, 1) \tTraining:  0.17 \tEval:  0.33 \tDiff:  -0.17\n",
+      "(1, 2, 1, 1, 2) \tTraining:  0.25 \tEval:  0.33 \tDiff:  -0.08\n"
      ]
     }
    ],
    "source": [
-    "# Subset all nonzero results (i.e. that can potentially lead to a purchase)\n",
-    "o5_nonzero = list([(key, value) for key, value in oracle5.items() if value > 0.0])\n",
-    "#print(oracle5)\n",
-    "print(o5_nonzero)"
+    "for key, value in ev_oracle5.items():\n",
+    "    if key in tr_oracle5:\n",
+    "        print(key[0:5], \"\\tTraining: \", \"{:.2f}\".format(round(tr_oracle5[key], 2)), \\\n",
+    "              \"\\tEval: \", \"{:.2f}\".format(round(value, 2)), \\\n",
+    "              \"\\tDiff: \", \"{:.2f}\".format(round(tr_oracle5[key] - value, 2)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3abe5060",
+   "id": "3d87c6ee",
    "metadata": {},
    "outputs": [],
    "source": []
