--- a/Oracle.ipynb
+++ b/Oracle.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "id": "6e307ce3",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading file from: D:\\GroupAssignment\\data\\filtered_long.csv\n"
+      "Loading file from: C:\\Programming\\CustomerAnalysis\\GroupAssignment\\data\\filtered_long.csv\n"
      ]
     },
     {
@@ -57,7 +57,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>[1, 2, 3, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 2, 1, ...</td>\n",
+       "      <td>(1, 2, 3, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 2, 1, ...</td>\n",
        "      <td>0</td>\n",
        "      <td>18</td>\n",
        "      <td>2</td>\n",
@@ -65,7 +65,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>[1, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 2, 1, 1, 1, ...</td>\n",
+       "      <td>(1, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 2, 1, 1, 1, ...</td>\n",
        "      <td>0</td>\n",
        "      <td>139</td>\n",
        "      <td>18</td>\n",
@@ -73,7 +73,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>[1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, ...</td>\n",
+       "      <td>(1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, ...</td>\n",
        "      <td>0</td>\n",
        "      <td>41</td>\n",
        "      <td>16</td>\n",
@@ -81,7 +81,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>[1, 2, 3, 1, 1, 2, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1]</td>\n",
+       "      <td>(1, 2, 3, 1, 1, 2, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1)</td>\n",
        "      <td>0</td>\n",
        "      <td>16</td>\n",
        "      <td>2</td>\n",
@@ -89,7 +89,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>[1, 1, 1, 1, 2, 3, 4, 1, 2, 1, 1, 1, 4, 4, 4, ...</td>\n",
+       "      <td>(1, 1, 1, 1, 2, 3, 4, 1, 2, 1, 1, 1, 4, 4, 4, ...</td>\n",
        "      <td>1</td>\n",
        "      <td>29</td>\n",
        "      <td>5</td>\n",
@@ -100,11 +100,11 @@
       ],
       "text/plain": [
        "   Unnamed: 0                                            session  purchase  \\\n",
-       "0           0  [1, 2, 3, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 2, 1, ...         0   \n",
-       "1           1  [1, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 2, 1, 1, 1, ...         0   \n",
-       "2           2  [1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, ...         0   \n",
-       "3           3   [1, 2, 3, 1, 1, 2, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1]         0   \n",
-       "4           4  [1, 1, 1, 1, 2, 3, 4, 1, 2, 1, 1, 1, 4, 4, 4, ...         1   \n",
+       "0           0  (1, 2, 3, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 2, 1, ...         0   \n",
+       "1           1  (1, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 2, 1, 1, 1, ...         0   \n",
+       "2           2  (1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, ...         0   \n",
+       "3           3   (1, 2, 3, 1, 1, 2, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1)         0   \n",
+       "4           4  (1, 1, 1, 1, 2, 3, 4, 1, 2, 1, 1, 1, 4, 4, 4, ...         1   \n",
        "\n",
        "   len  add  \n",
        "0   18    2  \n",
@@ -114,7 +114,7 @@
        "4   29    5  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "id": "c178ea70",
    "metadata": {},
    "outputs": [
@@ -145,20 +145,20 @@
        "tuple"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Format the sessions from a string in the form [1,2,3] to a working tuple\n",
-    "df.session = df.session.map(lambda x: tuple(map(int, x.strip(\"[]\").split(\",\"))))\n",
+    "df.session = df.session.map(lambda x: tuple(map(int, x.strip(\"()[]\").split(\",\"))))\n",
     "type(df.session[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 13,
    "id": "c0ccfb9a",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
        "129084         1   20    3  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,104 +272,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 59,
    "id": "442b7e6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import metrics\n",
-    "from random import random, seed\n",
+    "from collections import defaultdict\n",
     "\n",
-    "# \n",
-    "seed(123)\n",
+    "# Ideally Oracle would be a class object that contains information about e.g. clicks but CBA\n",
     "\n",
-    "def fit_oracle(training, max_clicks):\n",
+    "def fit_oracle(data, clicks):\n",
     "    \n",
     "    ### Max clicks determines: \n",
     "    ### - Which sessions are evaluated. Any sessions with a \"tail\" shorter than max clicks are dropped\n",
     "    ### - Where sessions are cut. A session with a \"tail\" longer than max clicks is sliced\n",
-    "    training = training[(training['len'] - training['add']) > max_clicks]\n",
-    "    training.session = training.apply(lambda x: x.session[:(x['add'] + max_clicks + 1)], axis=1)\n",
+    "    data = data[(data['len'] - data['add']) > clicks]\n",
+    "    sessions = data.apply(lambda x: x.session[:(x['add'] + clicks + 1)], axis=1)\n",
+    "    labels = data.purchase\n",
+    "    \n",
+    "    del data\n",
+    "    \n",
+    "    ### I finally caved and used the practical session code.\n",
+    "    \n",
+    "    d = defaultdict(lambda: defaultdict(int))\n",
+    "    for session, label in zip(sessions, labels):\n",
+    "        d[str(tuple(session))][label] += 1\n",
+    "    \n",
+    "    oracle = {}\n",
+    "    for session in d.keys():\n",
+    "        n_buy, n_ws = 0, 0\n",
+    "        for label in d[session].keys():\n",
+    "            if label:\n",
+    "                n_buy += d[session][label]\n",
+    "            else:\n",
+    "                n_ws += d[session][label]\n",
+    "        oracle[session] = n_buy / (n_buy + n_ws)\n",
     "\n",
-    "    ### Bit wasteful (we now have three partial dataframes and a dict) but easiest way\n",
-    "    ### to get the buy / no buy frequencies of each pattern in the training set\n",
-    "    buy   = training.session[training['purchase'] == 1].value_counts()\n",
-    "    nobuy = training.session[training['purchase'] == 0].value_counts()    \n",
-    "    \n",
-    "    oracle = dict.fromkeys(training.session)\n",
-    "    \n",
-    "    ### Calculate ratio of sessions that end in a purchase for each session in the dataset\n",
-    "    for key in oracle.keys():\n",
-    "        nb, nn = buy.get(key, default = 0), nobuy.get(key, default = 0)\n",
-    "        oracle[key] = nb / (nb + nn)\n",
-    "    \n",
     "    return oracle\n",
     "\n",
-    "def predict_oracle(oracle, test, max_clicks):\n",
+    "def predict_oracle(oracle, data, clicks):\n",
+    "    data = data[(data['len'] - data['add']) > clicks]\n",
+    "    sessions = data.apply(lambda x: x.session[:(x['add'] + clicks) + 1], axis=1)    \n",
+    "    true = data.purchase\n",
     "    \n",
-    "    ### Same process as on the training set. Could put this in a separate function\n",
-    "    test = test[(test['len'] - test['add']) > max_clicks]\n",
-    "    test.session = test.apply(lambda x: x.session[:(x['add'] + max_clicks) + 1], axis=1)    \n",
+    "    # The best metric for determining a label is not > 50% but the actual purchase ratio\n",
+    "    ratio = float((data.purchase[data['purchase'] == 1].value_counts() / len(data.purchase)))\n",
+    "    \n",
+    "    del data\n",
     "\n",
-    "    ### There are several methods to deal with missing patterns (which is most of them)\n",
-    "    ### Just make sure to comment out all unused options\n",
-    "    \n",
-    "    # Option 1: Assign all missing patterns as no-purchase\n",
-    "    #predict = test.session.map(lambda x: 1 if oracle.get(x, 0) > 0.5 else 0)\n",
+    "    predict = sessions.map(lambda x: 1 if oracle.get(str(x)) > ratio else 0)\n",
     "\n",
-    "    # Option 2: Random guess missing patterns\n",
-    "    predict = test.session.map(lambda x: 1 if oracle.get(x, random()) > 0.5 else 0)\n",
-    "    \n",
-    "    # Uncomment in case of options 1, 2:\n",
-    "    true = test.purchase\n",
-    "    \n",
-    "    # Option 3: Ignore missing patterns entirely (uses a trivial amount of the test set)\n",
-    "    \"\"\"\n",
-    "    predict = []\n",
-    "    true = []\n",
-    "    for i, k in test.iterrows():\n",
-    "        if oracle.get(k.session) != None:\n",
-    "            if oracle.get(k.session) > 0.5:\n",
-    "                predict.append(1)\n",
-    "            else:\n",
-    "                predict.append(0)\n",
-    "            true.append(k['purchase'])\n",
-    "    \"\"\"\n",
     "    f1 = metrics.f1_score(predict, true)\n",
+    "    \n",
     "    return f1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 60,
    "id": "d24de839",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "F:\\Anaconda\\lib\\site-packages\\pandas\\core\\generic.py:5516: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self[name] = value\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2569464614193049\n"
+      "0.24479604219172968\n",
+      "0.7088156723063223\n"
      ]
     }
    ],
    "source": [
-    "oracle = fit_oracle(training_set, 5)\n",
+    "### Do not fit the oracle on the training set! It is a metric for the evaluation set!\n",
+    "### This instantly solves the 'missing pattern' issue and matches with the practical session\n",
+    "oracle = fit_oracle(eval_set, 5)\n",
     "p5 = predict_oracle(oracle, eval_set, 5)\n",
-    "print(p5)\n"
+    "print(p5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7024849b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
