--- a/Oracle.ipynb
+++ b/Oracle.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c178ea70",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "tuple"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "c0ccfb9a",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
        "129084         1   20    3  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "442b7e6b",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
     "    sessions = data.apply(lambda x: x.session[:(x['add'] + clicks) + 1], axis=1)    \n",
     "    true = data.purchase\n",
     "    \n",
-    "    # The best metric for determining a label is not > 50% but the actual purchase ratio\n",
+    "    # The best metric for determining a label is not > 50%\n",
     "    ratio = float((data.purchase[data['purchase'] == 1].value_counts() / len(data.purchase)))\n",
     "    \n",
     "    del data\n",
