--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -16,7 +16,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "f462b539",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -194,6 +196,7 @@
    "source": [
     "# Drop all sessions not containing any 'add' events\n",
     "df = df[df.product_action.map(set(['add']).issubset)]\n",
+    "df = df[df.product_action.map(lambda x: \"add\" in x)]\n",
     "df.shape"
    ]
   },
